# can-trial

./: CMakeLists.txt  Doxyfile  README.md  comdef.h  main.c  mcp2515.c  mcp2515.h  naming.md  spi.c  spi.h
can_controller_driver/: CMakeLists.txt
can_controller_driver/include/: can_driver.h
can_controller_driver/src/: can_driver.c  mcp2515.c  mcp2515.h  mcp2515_irq.c  mcp2515_receive.c  mcp2515_register.h  mcp2515_send.c  mcp2515_spicmd.h
can_driver/: CMakeLists.txt
can_driver/include/: can.h  can_driver.h  can_driver_irq.h
can_driver/src/: can_driver.c  can_driver_irq.c  can_irq.c  mcp2515.c  mcp2515.h  mcp2515_irq.h  mcp2515_recv.c  mcp2515_reg_addr.h  mcp2515_register.h  mcp2515_send.c  mcp2515_spi_cmd.h  mcp2515_spicmd.h  pico_can.c  pico_can.h  rp2040.c  rp2040.h
com_lib/: CMakeLists.txt
com_lib/include/: can.h  types.h
hardware_manager/: CMakeLists.txt
hardware_manager/include/: hardware_manager.h
hardware_manager/src/: hardware_manager.c
int_manager/: CMakeLists.txt
pico_can/: CMakeLists.txt
pico_can/include/: pico_can.h
pico_can/src/: pico_can.c
pico_can/wrapper/: wrapper.c  wrapper.h
